@@ -15,7 +15,7 @@ Dependent Packages
    Package Web Page
    Graphlib version 2.0 or greater Graph creation, merging, and
    export
-   https://outreach.scidac.gov/projects/stat/
+   https://github.com/lee218llnl/STAT/
    Launchmon Scalable daemon co-location
    http://sourceforge.net/projects/launchmon/
    Libdwarf Debug information parsing (Required by StackWalker)
